# job

./: .gitignore  rou
apps/api/: .env.example  .gitignore  Dockerfile  PATCHES_APPLIED.md  PROPERTY_TESTS_GUIDE.md  README.md  RELEASE_HARDENING_PLAN.md  RELEASE_SUMMARY.md  VERIFICATION_COMMANDS.txt  VERIFY_PRODUCTION_READY.ps1  alembic.ini  create_db.py  debug_preferences.py  debug_shutdown.ps1  debug_test.py  endpoints.json  init.sql  init_db.py  pyproject.toml  pytest.ini  run_backend.bat  run_qa_tests.py  seed_ai_extensions_data.py  seed_data.py  setup_db.py  start.bat  start_and_extract.ps1  test_app_import.py  test_db.py  test_e2e.py  test_e2e_full.py  test_endpoints.py  test_simple.py
apps/api/alembic/: env.py
apps/api/app/: __init__.py  main.py
apps/api/migrations/: 003_add_skill_analysis_tables.sql
apps/api/scripts/: __init__.py  seed_all.py  seed_data.py  seed_matches_flow.py
apps/api/tests/: __init__.py  conftest.py  conftest_cookie_auth.py  factories.py  test_ai_features.py  test_apply_kit.py  test_apply_kit_properties.py  test_auth.py  test_auth_comprehensive.py  test_config.py  test_cookie_auth_smoke.py  test_e2e_workflow.py  test_error_handling.py  test_integration.py  test_job_processing_properties.py  test_job_sources_comprehensive.py  test_matcher.py  test_matches_cookie_flow.py  test_matching_properties.py  test_notifications.py  test_performance.py  test_preferences_comprehensive.py  test_resume_comprehensive.py  test_scheduler_health_endpoint.py  test_scheduler_monitoring.py  test_security.py  test_security_middleware.py  (+1 more)
(+120 files in other folders)
